migration-toolkit-apps/base/mta-web-console-executor-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    description: MTA Master AMQ port.
  labels:
    app: mta-web-console
    application: mta-web-console-amq
    xpaas: 1.3.2
    manager: openshift-controller-manager
  name: mta-web-console-amq
  namespace: app-migration
spec:
  ports:
  - port: 61616
    protocol: TCP
    targetPort: 61616
  selector:
    deploymentConfig: mta-web-console
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
