migration-toolkit-apps/base/mta-web-console-postgresql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mta-web-console
    application: mta-web-console
    xpaas: 1.3.2
    manager: openshift-controller-manager
  name: mta-web-console-postgresql
  namespace: app-migration
spec:
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    deploymentConfig: mta-web-console-postgresql
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
