migration-toolkit-apps/base/mta-web-console-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    description: The web server's http port.
    service.alpha.openshift.io/dependencies: '[{"name": "mta-web-console-postgresql",
      "kind": "Service"}]'
  labels:
    app: mta-web-console
    application: mta-web-console
    xpaas: 1.3.2
    manager: openshift-controller-manager
  name: mta-web-console
  namespace: app-migration
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deploymentConfig: mta-web-console
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
