migration-toolkit-apps/base/secure-mta-web-console-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    description: Route for application's https service.
  labels:
    app: mta-web-console
    application: mta-web-console
    xpaas: 1.3.2
    manager: openshift-controller-manager
  name: secure-mta-web-console
  namespace: app-migration
spec:
  tls:
    termination: edge
  to:
    kind: Service
    name: mta-web-console
    weight: 100
  wildcardPolicy: None
